--- a/email-pro/package.json
+++ b/email-pro/package.json
@@ -22,8 +22,20 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.12.0",
+    "@formkit/auto-animate": "^0.8.2",
+    "@nanostores/react": "github:ai/react",
     "@prisma/client": "^5.14.0",
+    "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-scroll-area": "^1.2.3",
+    "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-switch": "^1.1.3",
+    "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.50.0",
     "@trpc/client": "^11.0.0-rc.446",
@@ -33,16 +45,25 @@
     "axios": "^1.8.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
+    "dompurify": "^3.2.4",
+    "framer-motion": "^12.4.7",
     "geist": "^1.3.0",
+    "heroicons": "^2.2.0",
+    "jotai": "^2.12.1",
     "lucide-react": "^0.475.0",
     "next": "^15.0.1",
     "p-limit": "^6.2.0",
     "react": "^18.3.1",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-resizable-panels": "^2.1.7",
     "server-only": "^0.0.1",
+    "sonner": "^2.0.1",
     "superjson": "^2.2.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
+    "usehooks-ts": "^3.1.1",
     "zod": "^3.23.3"
   },
   "devDependencies": {
