--- a/email-pro/package.json
+++ b/email-pro/package.json
@@ -41,6 +41,7 @@
     "@trpc/client": "^11.0.0-rc.446",
     "@trpc/react-query": "^11.0.0-rc.446",
     "@trpc/server": "^11.0.0-rc.446",
+    "@types/dompurify": "^3.2.0",
     "@vercel/functions": "^2.0.0",
     "axios": "^1.8.1",
     "class-variance-authority": "^0.7.1",
@@ -54,6 +55,7 @@
     "lucide-react": "^0.475.0",
     "next": "^15.0.1",
     "p-limit": "^6.2.0",
+    "radix-ui": "^1.1.3",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
