--- a/email-pro/package.json
+++ b/email-pro/package.json
@@ -23,10 +23,12 @@
   "dependencies": {
     "@clerk/nextjs": "^6.12.0",
     "@formkit/auto-animate": "^0.8.2",
+    "@heroicons/react": "^2.2.0",
     "@nanostores/react": "github:ai/react",
     "@prisma/client": "^5.14.0",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-scroll-area": "^1.2.3",
@@ -38,6 +40,9 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.50.0",
+    "@tiptap/extension-text": "^2.11.5",
+    "@tiptap/react": "^2.11.5",
+    "@tiptap/starter-kit": "^2.11.5",
     "@trpc/client": "^11.0.0-rc.446",
     "@trpc/react-query": "^11.0.0-rc.446",
     "@trpc/server": "^11.0.0-rc.446",
@@ -51,15 +56,20 @@
     "framer-motion": "^12.4.7",
     "geist": "^1.3.0",
     "heroicons": "^2.2.0",
-    "jotai": "^2.12.1",
+    "jotai": "^2.12.2",
+    "kbar": "^0.1.0-beta.45",
     "lucide-react": "^0.475.0",
     "next": "^15.0.1",
+    "next-themes": "^0.4.5",
     "p-limit": "^6.2.0",
     "radix-ui": "^1.1.3",
     "react": "^18.3.1",
+    "react-avatar": "^5.0.3",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-letter": "^0.4.0",
     "react-resizable-panels": "^2.1.7",
+    "react-select": "^5.10.1",
     "server-only": "^0.0.1",
     "sonner": "^2.0.1",
     "superjson": "^2.2.1",
