--- a/email-pro/package.json
+++ b/email-pro/package.json
@@ -21,12 +21,14 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.2.1",
     "@clerk/nextjs": "^6.12.0",
     "@formkit/auto-animate": "^0.8.2",
     "@heroicons/react": "^2.2.0",
     "@nanostores/react": "github:ai/react",
     "@prisma/client": "^5.14.0",
     "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.2",
@@ -47,7 +49,9 @@
     "@trpc/react-query": "^11.0.0-rc.446",
     "@trpc/server": "^11.0.0-rc.446",
     "@types/dompurify": "^3.2.0",
+    "@types/turndown": "^5.0.5",
     "@vercel/functions": "^2.0.0",
+    "ai": "^4.1.54",
     "axios": "^1.8.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -75,7 +79,9 @@
     "superjson": "^2.2.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
+    "turndown": "^7.2.0",
     "usehooks-ts": "^3.1.1",
+    "vaul": "^1.1.2",
     "zod": "^3.23.3"
   },
   "devDependencies": {
